main and search page

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -14,6 +14,12 @@ body {
     padding: 70px 15px 20px;
 }
 
+.container .jumbotron {
+    text-align: center;
+    padding: 0;
+    background-color: transparent;
+}
+
 .footer {
     height: 60px;
     background-color: #f5f5f5;
@@ -21,213 +27,9 @@ body {
     padding-top: 20px;
 }
 
-.container .jumbotron {
-    text-align: center;
-    padding: 0;
-    background-color: transparent;
+.padding-10 {
+    padding: 10px;
 }
-
-.not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
-
-a.asc:after {
-    content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-    content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
-}
-
-.hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
-
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
-}
-
-.admin-image {
-    height: 100px;
-}
-
-.product-view img,
-.category-view img,
-.category-index img,
-.vendor-index img,
-.product-form img,
-.category-form img,
-.vendor-view img {
-    height: 100px;
-}
-
-.site-product .order-form {
-    margin-bottom: 10px;
-}
-
-.site-product .order-form .btn-buy {
-    padding: 2px 12px;
-}
-
-.site-product .order-form .ui-spinner input {
-    width: 80px;
-    margin: 1px 5px;
-}
-
-.index-product h2 a {
-    white-space: nowrap;
-}
-
-.index-product h2 {
-    overflow: hidden;
-    font-size: 20px;
-}
-
-.index-product h2 a:hover {
-    text-decoration: none;
-}
-
-.index-product a.thumbnail > img {
-    height: 150px;
-}
-
-.index-product .ui-spinner {
-    margin-right: 6px;
-}
-
-.index-product .ui-spinner input {
-    width: 80px;
-    margin: 1px 5px;
-}
-
-#cart a {
-    color: #fff;
-}
-
-#cart .cart-block {
-    display: none;
-    background: #008cba;
-    position: absolute;
-    padding: 10px 15px;
-    color: #fff;
-    width: 100%;
-    transition: all 1s;
-}
-
-#cart:hover a {
-    background-color: #006687;
-}
-
-#cart:hover .cart-block {
-    display: block !important;
-}
-
-.products .list-view .empty,
-.products .list-view .summary {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.width-50px {
-    width: 50px;
-}
-
-.ui-fancytree.fancytree-container {
-    font-size: 15px;
-}
-
-.ui-fancytree .fa {
-    color: #222222;
-}
-
-.fancytree-container.fancytree-treefocus span.fancytree-node.fancytree-selected span.fancytree-title,
-.fancytree-container.fancytree-treefocus span.fancytree-title:hover {
-    background: transparent;
-    border-color: transparent;
-}
-
-span.fancytree-node.fancytree-selected span.fancytree-title {
-    background-color: transparent;
-    border-color: transparent;
-}
-
-.fancytree-container.fancytree-treefocus span.fancytree-title:focus {
-    outline: none;
-}
-
-ul.fancytree-container {
-    border: 1px solid #cccccc;
-    margin-bottom: 5px;
-}
-
-span.fancytree-title {
-    border-radius: 0;
-    color: #535353;
-}
-
-.fancytree-container .fancytree-checkbox,
-.fancytree-container .fancytree-expander,
-.fancytree-container .fancytree-icon {
-    margin-top: 5px;
-    cursor: pointer;
-}
-
-.fancytree-container.fancytree-treefocus span.fancytree-node.fancytree-active .fa,
-span.fancytree-active.fancytree-selected .fancytree-title,
-.fancytree-container.fancytree-treefocus span.fancytree-node.fancytree-active.fancytree-selected span.fancytree-title,
-.fancytree-container.fancytree-treefocus span.fancytree-node.fancytree-active,
-.fancytree-container.fancytree-treefocus span.fancytree-node.fancytree-active span.fancytree-title {
-    color: #fff;
-}
-
-.fancytree-container.fancytree-treefocus span.fancytree-node.fancytree-active span.fancytree-title {
-    background-color: #008cba;
-    border-color: #008cba;
-}
-
-.fancytree-container span.fancytree-checkbox.fa {
-    margin-left: 5px;
-}
-
-.fancytree-container span.fancytree-node {
-    padding-left: 2px;
+.margin-10 {
+    margin: 10px;
 }
