--- a/web/css/site.css
+++ b/web/css/site.css
@@ -33,3 +33,12 @@ body {
 .margin-10 {
     margin: 10px;
 }
+
+div#map {
+  width: 100%;
+  height: 380px;
+  position: relative;
+  overflow: hidden;
+  transform: translateZ(0px);
+  background-color: rgb(229, 227, 223);
+}
