--- a/web/css/site.css
+++ b/web/css/site.css
@@ -41,4 +41,10 @@ div#map {
   overflow: hidden;
   transform: translateZ(0px);
   background-color: rgb(229, 227, 223);
+  margin-bottom: 50px;
+}
+
+ul.breadcrumb {
+  background-color: white;
+  border: none;
 }
