--- a/web/css/site.css
+++ b/web/css/site.css
@@ -57,3 +57,23 @@ ul.breadcrumb {
 .page-header h1 {
   margin-top: 10px !important;
 }
+
+
+.jumbotron .lead {
+  line-height: 150px;
+  font-size: 38px;
+}
+
+.search-form span {
+  font-size: 12px;
+  color: #818181;
+}
+
+.search-form .btn {
+  margin-top: 15px;
+}
+
+.search-form input {
+  width: 80%;
+  margin-top: 3px;
+}
