--- a/web/css/site.css
+++ b/web/css/site.css
@@ -60,7 +60,7 @@ ul.breadcrumb {
 
 
 .jumbotron .lead {
-  line-height: 150px;
+  line-height: 100px;
   font-size: 38px;
 }
 
@@ -70,10 +70,15 @@ ul.breadcrumb {
 }
 
 .search-form .btn {
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .search-form input {
   width: 80%;
   margin-top: 3px;
+}
+
+
+.popular {
+  margin-top: 50px;
 }
