--- a/web/css/site.css
+++ b/web/css/site.css
@@ -95,3 +95,11 @@ ul.breadcrumb {
 .event-dscr {
   margin: 30px 0;
 }
+
+.soc-btn {
+  margin-top: 35px;
+}
+
+.eauth-service-link {
+  width: 150px;
+}
